creditas-sf/force-app/main/default/objects/Documents__c/Documents__c.object-meta.xml
<CustomObject>
    <description>Objeto utilizado para registros das informações de documentos. Não usado para upload de arquivos.</description>
    <label>Documento</label>
    <nameField>
        <displayFormat>D-{00000000}</displayFormat>
        <label>Código do Documento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documentos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>