creditas-sf/force-app/main/default/objects/Documents__c/fields/DocumentKey__c.field-meta.xml
<CustomField>
    <fullName>DocumentKey__c</fullName>
    <description>Campo que recebe chave ( tipo do doc + número do doc). Preenchido pelo Flow</description>
    <label>Chave do documento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>