creditas-sf/force-app/main/default/objects/Documents__c/fields/DocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>DocumentNumber__c</fullName>
    <description>Campo usado para registro do numero do documento que está sendo registrado.</description>
    <label>Número do documento</label>
    <length>20</length>
    <type>Text</type>
</CustomField>