creditas-sf/force-app/main/default/objects/Documents__c/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <description>Tipo de documento que está sendo cadastrado</description>
    <label>Tipo de Documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CNH</fullName>
            </value>
            <value>
                <fullName>CURP</fullName>
            </value>
            <value>
                <fullName>PIS</fullName>
            </value>
            <value>
                <fullName>RNE</fullName>
            </value>
            <value>
                <fullName>CPF</fullName>
            </value>
            <value>
                <fullName>RG</fullName>
            </value>
            <value>
                <fullName>RFC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>