creditas-sf/force-app/main/default/objects/Documents__c/fields/IssueDate__c.field-meta.xml
<CustomField>
    <fullName>IssueDate__c</fullName>
    <description>Data de emissão do documento que está sendo registrado</description>
    <label>Data de expedição</label>
    <type>Date</type>
</CustomField>