creditas-sf/force-app/main/default/objects/Documents__c/fields/Issuer__c.field-meta.xml
<CustomField>
    <fullName>Issuer__c</fullName>
    <description>Órgão emissor do documento que está sendo registrado</description>
    <label>Órgão Emissor</label>
    <length>20</length>
    <type>Text</type>
</CustomField>