creditas-sf/force-app/main/default/objects/Documents__c/fields/IssuerState__c.field-meta.xml
<CustomField>
    <fullName>IssuerState__c</fullName>
    <description>Estado onde o documento que está sendo cadastrado foi emitido</description>
    <label>Estado emissor</label>
    <length>20</length>
    <type>Text</type>
</CustomField>