creditas-sf/force-app/main/default/objects/Documents__c/recordTypes/CNH.recordType-meta.xml
<RecordType>
    <fullName>CNH</fullName>
    <active>true</active>
    <label>CNH</label>
</RecordType>