creditas-sf/force-app/main/default/objects/Documents__c/recordTypes/CPF.recordType-meta.xml
<RecordType>
    <fullName>CPF</fullName>
    <active>true</active>
    <label>CPF</label>
</RecordType>