creditas-sf/force-app/main/default/objects/Documents__c/recordTypes/HOME_PIS.recordType-meta.xml
<RecordType>
    <fullName>HOME_PIS</fullName>
    <active>true</active>
    <label>[HOME] PIS</label>
</RecordType>