creditas-sf/force-app/main/default/objects/Documents__c/recordTypes/HOME_RNE.recordType-meta.xml
<RecordType>
    <fullName>HOME_RNE</fullName>
    <active>true</active>
    <label>[HOME] RNE</label>
</RecordType>