creditas-sf/force-app/main/default/objects/Documents__c/recordTypes/HOMECPF.recordType-meta.xml
<RecordType>
    <fullName>HOMECPF</fullName>
    <active>true</active>
    <label>[HOME] CPF</label>
</RecordType>