creditas-sf/force-app/main/default/objects/Documents__c/recordTypes/HOMERG.recordType-meta.xml
<RecordType>
    <fullName>HOMERG</fullName>
    <active>true</active>
    <label>[HOME] RG</label>
</RecordType>