creditas-sf/force-app/main/default/objects/Documents__c/recordTypes/PIS.recordType-meta.xml
<RecordType>
    <fullName>PIS</fullName>
    <active>true</active>
    <label>PIS</label>
</RecordType>