creditas-sf/force-app/main/default/objects/Documents__c/recordTypes/RG.recordType-meta.xml
<RecordType>
    <fullName>RG</fullName>
    <active>true</active>
    <label>RG</label>
</RecordType>