creditas-sf/force-app/main/default/objects/Documents__c/recordTypes/RNE.recordType-meta.xml
<RecordType>
    <fullName>RNE</fullName>
    <active>true</active>
    <label>RNE</label>
</RecordType>