creditas-sf/force-app/main/default/objects/Documents__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>IssueDate__c</columns>
    <columns>Issuer__c</columns>
    <columns>IssuerState__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>